--- a/www.w-tokyodo.dev/wstd/wp-content/plugins/wp-mimosafa-libs/mimosafa/settings/src/css/admin-form.css
+++ b/www.w-tokyodo.dev/wstd/wp-content/plugins/wp-mimosafa-libs/mimosafa/settings/src/css/admin-form.css
@@ -3,10 +3,10 @@
  *
  * <input>/<label> @todo rtl
  */
-input.label_before,
 input[type="checkbox"].label_before {
   margin-left: 4px;
 }
-input[type="text"].label_after {
+input[type="text"].labeled {
   margin-right: 4px;
+  margin-left: 4px;
 }
